# arbiter

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  go.mod  go.sum
api/: router.go
api/handlers/: anomaly.go  funding.go  meta.go  recommend.go  score.go
cmd/: main.go
config/: config.go
internal/constants/: constants.go
internal/exchange/: binance.go  binance_stream.go  bybit.go  bybit_stream.go  exchange.go  helpers.go  mexc.go  mexc_stream.go  stream.go
internal/models/: models.go
internal/scheduler/: scheduler.go
internal/scorer/: scorer.go
internal/stream/: manager.go  source.go
src/: config.rs  errors.rs  main.rs  models.rs
src/api/: handlers.rs  mod.rs  models.rs  router.rs
src/exchanges/: binance.rs  bybit.rs  mod.rs
src/orderbook/: mod.rs  store.rs
src/scoring/: mod.rs
