[package]
name = "arbiter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
axum-prometheus = "0.10.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
metrics = "0.24.3"
ordered-float = "5.1.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
